# tinyOSAllocator

./: README.md
alloc/: Cargo.toml
alloc/src/: allocator.rs  buddy.rs  lib.rs  linearAllocator.rs  linked_list.rs
alloc/src/Allocator/: bump.rs
alloc/src/linearAllocator/: bump.rs
allocator/src/: allocator.rs  lib.rs
allocator/src/linear/src/: allocator.rs  bump.rs
buddy_allocator/: Cargo.toml
buddy_allocator/src/: buddy.rs  lib.rs  linked_list.rs
linked_list_allocator/: Cargo.toml
linked_list_allocator/src/: lib.rs  linked_list.rs  test.rs
memoryAllocator/: Cargo.toml
memoryAllocator/src/: lib.rs
memoryAllocator/src/buddy_allocator/: buddy.rs  mod.rs  test.rs
memoryAllocator/src/linked_list_allocator/: linked_list.rs  mod.rs
