[package]
name = "linked_list_allocator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["use_spin_nightly"]
use_spin = ["spinning_top"]
use_spin_nightly = ["use_spin", "spinning_top/nightly", "const_mut_refs"]
alloc_ref = []
const_mut_refs = []

[dependencies.spinning_top]
version = "0.2.3"
optional = true
